Just formatting to complete
Just formatting to complete

--- a/index.html
+++ b/index.html
@@ -169,8 +169,7 @@
       </select>
       <br>
       <br>
-      <input type="button" class="btn btn-success" id="btnCalc" onclick="validateForm()" data-toggle="modal"
-      data-target="#totalPerPerson" value="calculate">
+      <input type="button" class="btn btn-success" id="btnCalc" onclick="validateForm()" value="calculate">
       <p id="total"></p>
     </form>
   </div>
@@ -204,7 +203,7 @@
         <h6>No of People</h6><p id="peoplePara"></p>
         <h6>Tip</h6><p id="percentagePara">%</p>
         <hr>
-        <h5>Total Per Person</h5><p id="totalPerPerson">€</p>
+        <h5>Total Per Person</h5><p id="totalPerPersonPara">€</p>
       </div>
       <div class="modal-footer" id="modalFooterTotal">
         <button
